--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -1,4 +1,12 @@
-flex-center
+flex()
   display flex
+.flex-center
+  flex()
   align-items center
   justify-content center
+.flex-middle
+  flex()
+  flex-direction align
+  justify-content center
+mgLeft(val)
+  margin-left val
